--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Jon Quach <hello@jonquach.com> (https://jonquach.com)",
   "license": "MIT",
   "devDependencies": {
-    "jest": "22.4.3"
+    "braces": "3.0.2",
+    "handlebars": "4.1.2",
+    "jest": "22.4.3",
+    "js-yaml": "3.13.1"
   }
 }
